--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Istorijos</string>
+    <string name="app_name">Gyvos Istorijos</string>
 
     <string name="mapbox_map_style_url">mapbox://styles/justasm/cisurswjg00012wmqtxqkc7aa</string>
 
