--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Gyvos Istorijos</string>
 
+    <string name="grant_permission_cta">Leisti</string>
+    <string name="grant_permission_rationale">Prašome leisti pasiekti įrenginio vietovės informaciją</string>
     <string name="open_story_cta">Noriu sužinoti</string>
 </resources>
