--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="sync_retry_cta">Bandyti iš naujo</string>
     <string name="sync_retry_rationale">Nepavyko rasti istorijų.\n\nPatikrinkite interneto ryši ir pabandykite iš naujo</string>
     <string name="geofence_notification_text">Visai netoli rasi įdomia istoriją</string>
+    <string name="travel_to_story_cta">Nukeliauk į šią vietą ir rasi gyvą istoriją.</string>
+    <string name="travel_to_story_cta_author">Kūrėjai</string>
 
 
     <!-- Error messages -->
